# bw-tui

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
bw_tui/: __init__.py  app.py  bitwarden.py  ui.py
